[gd_scene load_steps=4 format=3 uid="uid://dfsejqx1bx4hm"]

[ext_resource type="PackedScene" uid="uid://cwoa0i8oounv5" path="res://scenes/ui/UICanvas.tscn" id="1_1kmed"]
[ext_resource type="Script" path="res://scripts/Main.gd" id="1_pfqi2"]
[ext_resource type="Script" path="res://scenes/WorldCamera.gd" id="2_afqy1"]

[node name="Main" type="Node"]
script = ExtResource("1_pfqi2")

[node name="BorderRect" type="ReferenceRect" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 3995.0
offset_bottom = 3995.0
border_color = Color(1, 0, 0.545098, 1)
border_width = 5.0
editor_only = false

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.92549, 0.937255, 0.945098, 1)

[node name="GraphRoot" type="Node2D" parent="."]

[node name="WorldCamera" type="Camera2D" parent="GraphRoot"]
anchor_mode = 0
position_smoothing_enabled = true
position_smoothing_speed = 3.0
editor_draw_limits = true
script = ExtResource("2_afqy1")

[node name="UserInterface" parent="." instance=ExtResource("1_1kmed")]

[connection signal="resized" from="Background/ColorRect" to="." method="_on_background_rect_resize" flags=3]
